--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5.32", features = ["derive"] }
+crossterm = "0.28.1"
+memmap = "0.7.0"
+ratatui = "0.29.0"
